--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "bulma": "^0.7.1",
+    "eslint4b": "^5.4.0",
+    "espree": "^4.0.0",
+    "esutils": "^2.0.2",
+    "merge": "^1.2.0",
+    "normalize.css": "^8.0.0",
+    "vue": "^2.5.17",
+    "vue-eslint-editor": "^0.1.0",
+    "vue-golden-layout": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
